1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* fcall_{objc,java}.m: Include swarmconfig.h.  Don't define
	anything unless USE_AVCALL is set.

1999-07-09  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m: Remove static from declarations of variables
	with prefix c_.
	Add new global variables with prefixes c_/m_/f_ standing
	for class/method/field objects.
	(create_class_refs): Add initialization for new global class 
	variables.
	(create_method_refs): Add new function. Intialize global method
	variables.
	(create_field_refs): Add new function. Intialize global field 
	variables.
	(java_directory_init): Call create_method_refs and 
	create_field_refs after create_class_refs.
	(java_ensure_selector): Remove declarations and initializations
	of variables that are now global and set in create_class_refs or
	create_field_refs.

1999-07-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (java_directory_init): Make o_globalZone,
	o_uniformIntRand, and o_uniformDblRand global refs.

1999-07-06  Alex Lancaster  <alex@santafe.edu>

	* FCall.m (add_ffi_types): Protect Java-specific code with
	HAVE_JDK ifdefs.
	([FCall_c -performCall]): Likewise.

	* fcall_java.m (java_setup_static_call): Likewise.

	* fcall_java.h (java_call): Likewise.

1999-07-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* fcall_{objc,java}.[hm]: New files.

	* Makefile.am (EXTRA_DIST): Add fcall_{objc,java}.h and _fcall.m.
	(SRC): Add fcall_{objc,java}.m.

	* FCall.m: Include fcall_{objc,java}.h instead of avcall.h.
	(fillHiddenArguments): Use objc_setup_call, java_setup_call,
	and java_setup_static_call instead of direct use av_* macros.
	(avcall_add_primitive): Remove.
	(add_ffi_types): Use calls to {objc_java}_set_return_type and
	{objc_java}_add_primitive per call type.
	([FCall_c -performCall]): Call {java_objc}_call instead of
	av_call.

	* FArguments.h (FArguments_c): Replace avalist with objc_avalist
	and java_avalist.

1999-07-05    <mgd@HELEN>
