@@ -1,3 +1,13 @@
+1999-07-11  Vladimir Jojic  <vjojic@chama.santafe.edu>
+
+	* directory.m (java_directory_objc_find): Use getTypeImplemented
+	to find out which protocol non-creatable object conforms to.
+	(java_ensure_selector): Store global reference of a Java selector
+	object to directory.
+
+	* Program.m (_obj_initModule): Disable audit for implementations
+	in creatable types.
+
 1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* fcall_{objc,java}.m: Include swarmconfig.h.  Don't define
